syntax="proto3";
package type.signup;
option go_package="gen/go/auth";

message SignUpRequest {
    string username=1;
    string email=2;
    string password=3;
}

message SignUpResponse {
    string userId=1;
    int32 status = 2;
    string message = 3;
}